# magneto

./: Cargo.toml  LICENSE  README.md
assets/: empty.json  response.json
examples/: main.rs  search.rs
src/: errors.rs  http_client.rs  lib.rs  main.rs
src/magneto/: mod.rs  piratebay.rs
src/search_providers/: knaben.rs  mod.rs  piratebay.rs  yts.rs
