[package]
name = "magneto"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.2"
hyper-tls = "0.6.0"
clap = { version = "4.5.20", features = ["help", "usage", "error-context", "std", "derive"], default_features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
async-trait = "^0.1.83"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
