[package]
name = "magneto"
version = "0.1.0"
edition = "2021"
description = "A torrent searching library"
license = "MIT"
keywords = ["torrent", "magnet", "tracker", "api", "library"]
repository = "https://github.com/mitander/magneto"

[features]
default = ["reqwest/default-tls"]
blocking = ["reqwest/blocking"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["help", "usage", "error-context", "std", "derive"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
async-trait = "^0.1.83"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.9", default-features = false, optional = true }
url = "2.5.3"
http = "1.1.0"
anyhow = "1.0.93"
serde_urlencoded = "0.7.1"
thiserror = "2.0.3"
mockito = "1.6.1"
log = "0.4.22"
env_logger = "0.11.5"
assert_matches = "1.5.0"

[examples]
name = "search"
